--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-icons": "^3.10.0",
     "sanity-plugin-asset-source-unsplash": "^0.1.3",
     "sanity-plugin-dark-mode": "^0.0.32",
+    "sanity-plugin-leaflet-input": "^1.0.0",
     "sanity-plugin-mapbox-input": "^0.0.2"
   },
   "devDependencies": {}
