--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@sanity/base": "^2.0.7",
     "@sanity/components": "^2.0.7",
     "@sanity/core": "^2.0.5",
+    "@sanity/dashboard": "^2.0.5",
     "@sanity/default-layout": "^2.0.7",
     "@sanity/default-login": "^2.0.5",
     "@sanity/desk-tool": "^2.0.8",
@@ -28,6 +29,7 @@
     "react-icons": "^3.10.0",
     "sanity-plugin-asset-source-unsplash": "^0.1.3",
     "sanity-plugin-dark-mode": "^0.0.32",
+    "sanity-plugin-dashboard-widget-netlify": "^1.0.1",
     "sanity-plugin-leaflet-input": "^1.0.0",
     "sanity-plugin-mapbox-input": "^0.0.3"
   },
